	* imagewin/manip.h: Uninitialized variable being assigned to itself.
	* imagewin/scale_xbr.h: Fixed forward declaration.
	* tools/wuc.c: Missing initializers.
	* usecode/ucdisasm.cc: 32-bits is 8 hex digits.
	* usecode/ucinternal.cc: Usecode_Trace and Usecode_TraceReturn are used only
	  in debug.
	* usecode/ucxt/*/*: Portability: typeof is GNU extension.

2013-01-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/midi_drivers/FluidSynthMidiDriver.*: Eliminated warnings. Added the
	  ability to specify multiple soundfonts for FluidSynth in exult.cfg which
	  will make use of FuildSynth's soundfont stack. Soundfonts are specified in
	  the fluidsynth_soundfontN keys (N = 0 to 9) which are loaded in numerical
	  order (0 first), plus the old fluidsynth_soundfont key, which loads after
	  all others.
	Rev 7338
	* files/listfiles.cc: Fixed memory leak on Amiga and MorphOS. Would be good
	  to be able to test...
	Rev 7339
	* files/snprintf.cc: Fixed spacing.
	* imagewin/savepcx.cc: Removing no longer needed using directives.
	* imagewin/*.h: Synchronized comments with code.
	* mapedit/*: Removed a handful of warnings. Fixed GtkTreeIter memory leaks.
	  Close all windows, unload all data, free all memory and switch out of the
	  groups tab when switching games or mods. These changes fix bug #3136375
	  "Exult Studio crash, Groups tab doesn't update on game change".

2013-01-24	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* keys.cc: Missing is_movement initializer for ActionScrollLeft. Warnings.
	Rev 7332
	* all: Eliminating more warnings.
	* imagewin/savepcx.cc: malloc/free to new[]/delete[].
	* audio/midi_drivers/mt32emu/freeverb.h: Updated handling of denormals.
	Rev 7333
	* all: Eliminating more warnings.
	* audio/midi_drivers/fmopl.cpp: malloc/free to new[]/delete[].
	* audio/midi_drivers/timidity/timidity.cpp: Reformatted for more consistent
	  spacing.
	Rev 7334
	* audio/midi_drivers/mt32emu/*: Last MT32Emu warnings I will eliminate until