@@ -475,16 +475,16 @@ static const uint32 display_mem_size = 0x14;	// Display is 20 ASCII characters (
 
 // Display messages                         0123456789ABCDEF0123
 #ifdef PENTAGRAM_IN_EXULT
-static const char display[]              = " Uploading Timbres! ";
-static const char display_black_gate[]   = "BG Uploading Timbres";
-static const char display_serpent_isle[] = "SI Uploading Timbres";
+//static const char display[]              = " Uploading Timbres! ";
+//static const char display_black_gate[]   = "BG Uploading Timbres";
+//static const char display_serpent_isle[] = "SI Uploading Timbres";
 
 static const char display_beginning[] =    "--==|  Exult!  |==--";
 static const char display_beginning_bg[] = " U7: The Black Gate ";
 static const char display_beginning_si[] = "U7: The Serpent Isle";
 #else
 
-static const char display[]              = " Uploading Timbres! ";
+//static const char display[]              = " Uploading Timbres! ";
 static const char display_beginning[] =    "--=| Pentagram! |=--";
 #endif
 
@@ -2044,17 +2044,17 @@ void XMidiFile::InsertDisplayEvents()
 	// Display
 	//
 
-	const char *display = ::display;
+	//const char *display = ::display;
 	const char *display_beginning = ::display_beginning;
 #ifdef PENTAGRAM_IN_EXULT
 	if (Game::get_game_type() == SERPENT_ISLE)
 	{
-		display = display_serpent_isle;
+		//display = display_serpent_isle;
 		display_beginning = display_beginning_si;
 	}
 	else if (Game::get_game_type() == BLACK_GATE)
 	{
-		display = display_black_gate;
+		//display = display_black_gate;
 		display_beginning = display_beginning_bg;
 	}
 #endif
