@@ -89,7 +89,7 @@ public:
 			Symbol_kind k = table_scope, int v = -1)
 		: Usecode_symbol(nm, k, v)
 		{  }
-	~Usecode_scope_symbol();
+	virtual ~Usecode_scope_symbol();
 	void read(std::istream& in);
 	void write(std::ostream& out);
 	void add_sym(Usecode_symbol *sym);
@@ -114,6 +114,7 @@ public:
 						int v, int nvars = 0)
 		: Usecode_scope_symbol(nm, k, v), num_vars(nvars)
 		{  }
+	virtual ~Usecode_class_symbol() {  }
 	void add_method_num(int val)
 		{ methods.push_back(val); }
 	int get_method_id(int i)
